added anomaly score functionality
