# backend/firebug_server/swagger_server/swagger/swagger.yaml
@@ -35,6 +35,7 @@ paths:
       operationId: "get_all_devices"
       produces:
       - "application/json"
+      parameters: []
       responses:
         200:
           description: "OK"
@@ -98,6 +99,7 @@ definitions:
   Device:
     type: "object"
     required:
+    - "anomaly_score_series"
     - "concentration_series"
     - "device_number"
     - "geolocation"
@@ -112,6 +114,8 @@ definitions:
         $ref: "#/definitions/TimeSeries"
       concentration_series:
         $ref: "#/definitions/ConcentrationSeries"
+      anomaly_score_series:
+        $ref: "#/definitions/AnomalyScoreSeries"
     example:
       time_series:
         timelist:
@@ -130,9 +134,49 @@ definitions:
   Devices:
     type: "object"
     required:
-    - devices
+    - "devices"
     properties:
       devices:
         type: "array"
         items:
           $ref: "#/definitions/Device"
+    example:
+      devices:
+      - time_series:
+          timelist:
+          - "timelist"
+          - "timelist"
+        device_number: 0
+        concentration_series:
+          concentrationlist:
+          - 5.962133916683182377482808078639209270477294921875
+          - 5.962133916683182377482808078639209270477294921875
+        geolocation:
+          latitude: 6.02745618307040320615897144307382404804229736328125
+          lat_direction: "lat_direction"
+          lon_direction: "lon_direction"
+          longitude: 1.46581298050294517310021547018550336360931396484375
+      - time_series:
+          timelist:
+          - "timelist"
+          - "timelist"
+        device_number: 0
+        concentration_series:
+          concentrationlist:
+          - 5.962133916683182377482808078639209270477294921875
+          - 5.962133916683182377482808078639209270477294921875
+        geolocation:
+          latitude: 6.02745618307040320615897144307382404804229736328125
+          lat_direction: "lat_direction"
+          lon_direction: "lon_direction"
+          longitude: 1.46581298050294517310021547018550336360931396484375
+  AnomalyScoreSeries:
+    type: "object"
+    required:
+    - "anomalyscorelist"
+    properties:
+      anomalyscorelist:
+        type: "array"
+        items:
+          type: "number"
+          description: "Anomaly score for each data point in the sensor data"
